懂了，因为每次打开之后RecipeType的顺序不一样，重新排序应该可以解决